# consolidation_incentives_evm

./: CLAUDE.md  NEXT_STEPS.md  PLAN.md  PROJECT_SUMMARY.md  README.md  REAL_CHAIN_TESTING.md  REAL_CHAIN_VALIDATION.md  STATUS.md
contracts/: .env.example  .gitignore  DEPLOYMENT.md  README.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: ConsolidationIncentives.sol
contracts/src/lib/: SSZMerkleVerifier.sol
contracts/test/: ConsolidationIncentives.t.sol  ConsolidationIncentivesVectors.t.sol  Deploy.t.sol  SSZMerkleVerifier.t.sol
contracts/test-vectors/: test_vectors.json
contracts/test/mocks/: MockBeaconRootsOracle.sol
docs/: gnosis-beacon-state-research.md
dune/: README.md
dune/queries/: consolidations_over_time.sql  eligibility_distribution.sql  program_health.sql  top_validators.sql  total_rewards.sql
prover/: .env.example  Cargo.toml  README.md
prover/crates/integration-tests/: Cargo.toml
prover/crates/integration-tests/src/: lib.rs
prover/crates/proof-gen/: Cargo.toml
prover/crates/proof-gen/src/: beacon_client.rs  beacon_state.rs  gindex.rs  lib.rs  proof.rs  sparse_proof.rs  state_prover.rs  types.rs
prover/crates/real-chain-test/: Cargo.toml
prover/crates/real-chain-test/src/: main.rs
prover/crates/service/: Cargo.toml
prover/crates/service/examples/: test_scanner.rs
prover/crates/service/src/: api.rs  main.rs  scanner.rs  state.rs  submitter.rs
prover/crates/test-vectors/: Cargo.toml
prover/crates/test-vectors/src/: main.rs
prover/tests/: integration.rs
