[workspace]
members = [
    "crates/proof-gen",
    "crates/service",
    "crates/test-vectors",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Gnosis Consolidation Incentives Team"]
license = "MIT"
repository = "https://github.com/gnosischain/consolidation_incentives_evm"

[workspace.dependencies]
# SSZ and Merkle proofs
ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "ec3073e2273b4d0873fcb6df68ff4eff79588e92" }

# Ethereum/Gnosis chain interaction
alloy = { version = "1.0", features = ["full"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Web framework
axum = { version = "0.8" }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = { version = "0.4", features = ["serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Cryptography
sha2 = "0.10"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
dashmap = "6.1"
parking_lot = "0.12"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"

# Testing
proptest = "1.6"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
