[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
proof-gen = { path = "../proof-gen", features = ["gnosis"] }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
