[package]
name = "real-chain-test"
version.workspace = true
edition.workspace = true

[dependencies]
proof-gen = { path = "../proof-gen" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
hex.workspace = true
ssz_rs.workspace = true
clap.workspace = true
chrono = { version = "0.4", default-features = false, features = ["std"] }

[dev-dependencies]
wiremock.workspace = true

[[bin]]
name = "fetch-and-prove"
path = "src/main.rs"
