[package]
name = "consolidation-service"
description = "REST API and auto-submitter service for consolidation incentives"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "consolidation-service"
path = "src/main.rs"

[dependencies]
proof-gen = { path = "../proof-gen" }

# Ethereum interaction
alloy.workspace = true

# Async runtime
tokio.workspace = true

# HTTP server
axum.workspace = true
tower-http.workspace = true
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
hex.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

# State management
dashmap.workspace = true
parking_lot.workspace = true

# CLI and config
clap.workspace = true
dotenvy.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
